...
                            .padding(style.metrics.contentPadding),
                )

                // Chevron
                Row(
                    verticalAlignment = Alignment.CenterVertically,
                    modifier = Modifier.testTag("Jewel.ComboBox.ChevronContainer"),
                ) {
                    val iconColor = if (isEnabled) Color.Unspecified else style.colors.borderDisabled
                    Icon(
                        modifier =
                            Modifier.width(style.metrics.arrowMinSize.width).height(style.metrics.arrowMinSize.height),
                        key = style.icons.chevronDown,
...
                    if (!chevronClicked) {
                        setPopupExpanded(false)
                    }
                },
                modifier =
                    menuModifier
                        .testTag("Jewel.ComboBox.PopupMenu")
                        .semantics { contentDescription = "Jewel.ComboBox.PopupMenu" }
                        .defaultMinSize(minWidth = with(density) { comboBoxWidth.toDp() })
                        .heightIn(max = mph)
                        .width(boxWith),
                horizontalAlignment = Alignment.Start,
                popupProperties = PopupProperties(focusable = false),
...
