...
                onListHoverChange,
                onHoverItemChange,
                listItemContent,
            )
        }
    } else {
        ComboBox(
            modifier = modifier,
            isEnabled = isEnabled,
            labelText = items[selectedItem],
            outline = Outline.None,
            maxPopupHeight = popupMaxHeight,
            interactionSource = remember { MutableInteractionSource() },
...
