...
        val dividerColor = if (isEnabled) style.colors.border else style.colors.borderDisabled
        val iconTint = if (isEnabled) Color.Unspecified else style.colors.contentDisabled
        Divider(
            orientation = Orientation.Vertical,
            thickness = style.metrics.borderWidth,
            color = dividerColor,
            modifier = Modifier.testTag("Jewel.ComboBox.Divider").align(Alignment.CenterStart).fillMaxHeight(),
        )

        Box(Modifier.fillMaxWidth().align(Alignment.CenterEnd), contentAlignment = Alignment.Center) {
            Icon(key = style.icons.chevronDown, tint = iconTint, contentDescription = null)
        }
    }
...
